<resources>
  <string name="app_name" translatable="false">Socify</string>
  <string name="username">Username</string>
  <string name="fullname">Full Name</string>
  <string name="email">Email Address</string>
  <string name="password">Password</string>
  <string name="register">Register</string>
  <string name="already_have_an_account">Already have an account? Sign In</string>
  <string name="login">Login</string>
  <string name="don_t_have_an_account">Don\'t have an account? Sign Up</string>
  <string name="search">Search…</string>
  <string name="following">Following</string>
  <string name="follow">Follow</string>
  <string name="post">POST</string>
  <string name="description">Description</string>
  <string name="add_a_comment">Add a comment…</string>
  <string name="posts">Posts</string>
  <string name="followers">Followers</string>
  <string name="edit_profile">Edit Profile</string>
  <string name="photo">Photo</string>
  <string name="save">SAVE</string>
  <string name="change_photo">Change Photo</string>
  <string name="bio">Bio</string>
  <string name="notifications">Notifications</string>
  <string name="liked_your_post">Liked your post</string>
  <string name="started_following_you">Started following you</string>
  <string name="commented">Commented:</string>
  <string name="likes">Likes</string>
  <string name="settings">Settings</string>
  <string name="logout">Logout</string>
  <string name="options">Options</string>
  <string name="my_story">My Story</string>
  <string name="add_story">Add Story</string>
  <string name="view_story">View story</string>
  <string name="views">Views</string>
  <string name="edit">Edit</string>
  <string name="delete">Delete</string>
  <string name="edit_post">Edit Post</string>
  <string name="cancel">Cancel</string>
  <string name="report">Report</string>
  <string name="do_you_want_to_delete">Do you want to delete?</string>
  <string name="no">No</string>
  <string name="yes">Yes</string>
  <string name="chats">Chats</string>
  <string name="people">People</string>
  <string name="type_a_message">Type a message…</string>
  <string name="message">Message</string>
  <string name="seen">Seen</string>
  <string name="delivered">Delivered</string>
  <string name="forgot_your_password">Forgot your password?</string>
  <string name="reset">Reset</string>
  <string name="by_clicking_reset_you_will_receive_an_email_to_reset_your_password">By clicking RESET, you will receive an email to reset your password</string>
  <string name="reset_password">Reset Password</string>
  <string name="no_message">No Message</string>
  <string name="pref_general_title">General settings</string>
  <string name="pref_language">Language</string>
  <string name="delete_user">Delete user</string>
  <string name="confirm_password">Confirm Password</string>
  <string name="confirm">Confirm</string>
  <string name="this_user_has_been_deleted">This user has been deleted</string>
  <string name="you">You</string>
  <string name="unsent">Unsent</string>
  <string name="remove_for_me">Remove for me</string>
  <string name="edit_message">Edit message</string>
  <string name="edit_history">Edit history</string>
  <string name="close">Close</string>
  <string name="the_message_has_been_unsent">The message has been unsent</string>
  <string name="hide_chat">Hide chat</string>
  <string name="hide_chat_message">This conversation is only temporarily hidden from your side, the conversation content will not be deleted.</string>
  <string name="ok">Ok</string>
  <string name="close_conversation">Close conversation</string>
</resources>
