<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="10dp"
  android:orientation="vertical"
  android:gravity="center"
  tools:context=".ui.RegisterActivity">

  <ImageView
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:src="@drawable/logo" />

  <EditText
    android:id="@+id/username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:padding="10dp"
    android:background="@drawable/edittext_background"
    android:hint="@string/username" />

  <EditText
    android:id="@+id/fullname"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:padding="10dp"
    android:background="@drawable/edittext_background"
    android:hint="@string/fullname" />

  <EditText
    android:id="@+id/email"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:padding="10dp"
    android:background="@drawable/edittext_background"
    android:hint="@string/email"
    android:inputType="textEmailAddress" />

  <EditText
    android:id="@+id/password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:padding="10dp"
    android:background="@drawable/edittext_background"
    android:hint="@string/password"
    android:inputType="textPassword" />

  <Button
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:text="@string/register"
    android:textColor="@color/white"
    android:background="@drawable/button_background" />

  <TextView
    android:id="@+id/txt_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/already_have_an_account" />

</LinearLayout>