<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".ui.EditProfileActivity">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/windowBackground">

    <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?android:attr/windowBackground">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
          android:id="@+id/close"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:layout_alignParentStart="true"
          android:src="@drawable/ic_close" />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:layout_marginStart="10dp"
          android:layout_toEndOf="@id/close"
          android:text="@string/edit_profile"
          android:textSize="18sp"
          android:textStyle="bold"
          android:textColor="@color/colorPrimary" />

        <TextView
          android:id="@+id/save"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="10dp"
          android:layout_alignParentEnd="true"
          android:text="@string/save"
          android:textSize="16sp"
          android:textColor="@color/colorPrimary" />

      </RelativeLayout>

    </com.google.android.material.appbar.MaterialToolbar>

  </com.google.android.material.appbar.AppBarLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
      android:id="@+id/image_profile"
      android:layout_width="80dp"
      android:layout_height="80dp"
      android:layout_gravity="center"
      android:layout_margin="10dp"
      android:src="@mipmap/ic_launcher" />
    
    <TextView
      android:id="@+id/tv_change"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/change_photo"
      android:textSize="16sp"
      android:textColor="@color/colorPrimary" />

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/fullname"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:hint="@string/fullname" />

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/username" />

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/bio"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/bio" />

  </LinearLayout>

</LinearLayout>