<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".ui.ResetPasswordActivity">

  <include
    android:id="@+id/toolbar"
    layout="@layout/appbar_chat_layout" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">

    <EditText
      android:id="@+id/send_email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:background="@drawable/edittext_background"
      android:hint="@string/email"
      android:inputType="textEmailAddress" />
    
    <Button
      android:id="@+id/btn_reset"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:background="@drawable/button_background"
      android:text="@string/reset" />
    
    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dp"
      android:gravity="center"
      android:text="@string/by_clicking_reset_you_will_receive_an_email_to_reset_your_password"
      android:textColor="@color/black" />

  </LinearLayout>

</LinearLayout>