<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context=".ui.OptionsActivity">
  
  <com.google.android.material.appbar.MaterialToolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/windowBackground" />

  <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/colorAccent" />

  <TextView
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:text="@string/settings"
    android:textSize="18sp"
    android:textColor="@color/black" />

  <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/colorAccent" />

  <TextView
    android:id="@+id/logout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:text="@string/logout"
    android:textSize="18sp"
    android:textColor="@color/black" />

  <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/colorAccent" />

  <TextView
    android:id="@+id/delete_user"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:text="@string/delete_user"
    android:textSize="18sp"
    android:textColor="@color/red" />

  <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/colorAccent" />

</LinearLayout>