<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.fragments.ProfileFragment">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/appbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/windowBackground">

    <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="?android:attr/windowBackground">

      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
          android:id="@+id/username"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="18sp"
          android:textStyle="bold"
          android:textColor="@color/colorPrimary"
          android:maxLines="1" />
        
        <ImageView
          android:id="@+id/options"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:layout_marginEnd="10dp"
          android:src="@drawable/ic_menu" />

      </RelativeLayout>

    </com.google.android.material.appbar.MaterialToolbar>

  </com.google.android.material.appbar.AppBarLayout>
  
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/appbar">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
          android:id="@+id/image_profile"
          android:layout_width="80dp"
          android:layout_height="80dp" />
        
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="80dp"
          android:orientation="vertical"
          android:paddingStart="20dp"
          android:paddingEnd="4dp">

          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical">

              <TextView
                android:id="@+id/posts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary" />

              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/posts" />

            </LinearLayout>

            <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="35dp"
              android:orientation="vertical">

              <TextView
                android:id="@+id/followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary" />

              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers" />

            </LinearLayout>

            <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="35dp"
              android:orientation="vertical">

              <TextView
                android:id="@+id/following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary" />

              <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following" />

            </LinearLayout>

          </LinearLayout>
          
          <Button
            android:id="@+id/edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_black" />

        </LinearLayout>

      </LinearLayout>
      
      <LinearLayout
        android:id="@+id/mid_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
          android:id="@+id/fullname"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="16dp"
          android:textStyle="bold"
          android:textColor="@color/colorPrimary"
          android:maxLines="1" />

        <TextView
          android:id="@+id/bio"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:textColor="@color/colorPrimary"
          android:maxLines="5" />

      </LinearLayout>

      <LinearLayout
        android:id="@+id/last_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="-5dp"
        android:layout_marginEnd="-5dp"
        android:background="@drawable/button_black">

        <ImageButton
          android:id="@+id/my_photos"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:src="@drawable/ic_grid"
          style="?android:attr/buttonBarButtonStyle" />

        <ImageButton
          android:id="@+id/saved_photos"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:src="@drawable/ic_save"
          style="?android:attr/buttonBarButtonStyle" />

      </LinearLayout>

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    </LinearLayout>

  </ScrollView>

</RelativeLayout>